# countdown-data

./: .gitignore  Cargo.toml  LICENSE  README.md  make_datasets.ipynb  requirements.txt
scripts/: countdown-exhaustive-2-4.sh  countdown-random.sh  exhaustive-2.sh  random-3-8.sh  random-solvable-3-8.sh  readme.py
src/: lib.rs  main.rs
