[package]
name = "countdown"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
rand = "0.9"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13.2"
